# debug_template

./: .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
docker/: Dockerfile  docker_build.sh  docker_run.sh
pydebug_template/: utils.py
pydebug_template/example/: example.py
